🚧 self-repaying-ens page poc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "ES6",
     "module": "esnext",
     "importsNotUsedAsValues": "error",
+    "resolveJsonModule": true,
     "isolatedModules": false,
     "esModuleInterop": true,
     "sourceMap": true,
